# sps-trip-planner

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_correction.md
.github/workflows/: tests.yml
charts/: README.md  sps_map_balanced_6mi_2026-06-19.html  sps_map_nearest-trailhead_2026-06-19.html
data/: benchmark_routes.csv  passes.csv  sps_peaks.csv  sps_sample.csv  trailheads.csv
data/source/: README.md  gnis_sierra_gaps.txt  gnis_sierra_summits.txt
examples/: example_output.json  sps_approach_output.json  sps_full_output.json
scripts/: assign_trailheads.py  build_dataset.py  build_gnis_gaps.py  fill_pass_elevation.py  map_clusters.py  merge_coords.py  merge_gnis.py  merge_passes.py  parse_benchmarks.py  plot_approach_impact.py  plot_benchmarks.py
sierra_peaks/: __init__.py  approach.py  clustering.py  data_loader.py  diagnostics.py  distances.py  export.py  manual.py  model.py  passes.py  pipeline.py  tsp.py  visualize.py
tests/: test_pipeline.py
webapp/: app.py
webapp/static/: app.js  index.html  style.css
